--- a/Natours/starter/sass/components/_button.scss
+++ b/Natours/starter/sass/components/_button.scss
@@ -1,29 +1,38 @@
-.btn:link,
-.btn:visited{
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    border-radius: 10rem;
-    transition: all 0.2s;
-    backface-visibility: hidden;
-    position: relative;
-    font-size: 1.6rem;
+.btn {
+    &,
+    &:link,
+    &:visited{
+        text-transform: uppercase;
+        text-decoration: none;
+        padding: 1.5rem 4rem;
+        display: inline-block;
+        border-radius: 10rem;
+        transition: all 0.2s;
+        backface-visibility: hidden;
+        position: relative;
+        font-size: $default-font-size;
+
+        // Change for <button> element
+        border: none;
+        cursor: pointer;
+        outline: none;
+    }
 }
 
 .btn:hover{
     transform: translateY(-0.3rem);
     box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
+
+    &::after{
+        transform: scaleX(1.4) scaleY(1.6);
+        opacity: 0;
+
+    }
 }
 
 .btn:active{
     transform: translateY(-0.1rem);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
-}
-
-.btn--white{
-    background-color: $color-white;
-    color: $color-grey;
 }
 
 .btn::after{
@@ -39,16 +48,52 @@
     transition: all 0.4s;
 }
 
+.btn--white{
+    background-color: $color-white;
+    color: $color-grey;
+}
 .btn--white::after{
     background-color: $color-white;
 }
 
-.btn:hover::after{
-    transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0;
+.btn--green{
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after{
+        background-color: $color-primary;
+    }
 }
+
+
 
 .btn--animate{
     animation: moveInBottom ease-in 0.5s 0.7s;
     animation-fill-mode: backwards;
+
+}
+
+.btn-text{
+    &:link,
+    &:visited{
+        font-size: 1.6rem;
+        color: $color-primary;
+        display: inline-block;
+        text-decoration: none;
+        border-bottom: 1px solid $color-primary;
+        padding: 3px;
+        transition: all 0.2s;
+    }
+
+    &:hover{
+        background-color: $color-primary;
+        color: $color-white;
+        box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
+        transform: translateY(-2px);
+    }
+
+    &:active{
+        box-shadow: 0 0.5rem 2rem rgba($color-black, 0.2);
+        transform: translateY(0);
+    }
 }
