--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -8,9 +8,18 @@
 @import "base/ultilities";
 
 @import "components/button";
+@import "components/bg-video";
+@import "components/card";
+@import "components/composition";
+@import "components/feature-box";
+@import "components/form";
+@import "components/story";
 
 @import "layout/header";
+@import "layout/grid";
 
 @import "pages/home";
+
+
 
 
