--- a/Natours/starter/sass/abstracts/_variables.scss
+++ b/Natours/starter/sass/abstracts/_variables.scss
@@ -18,6 +18,8 @@ $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
 
 $color-grey-dark-2: #999;
+$color-grey-dark-3: #333;
+$color-grey-dark-4: #000;
 
 // FONT
 $default-font-size: 1.6rem;
